Fix dark mode dropdown item text colour

--- a/custom/templates/DefaultRevamp/css/custom.css
+++ b/custom/templates/DefaultRevamp/css/custom.css
@@ -1093,6 +1093,7 @@ body.dark .ui.card>.content>.description .list .item .text,
 body.dark .ui.card>.extra,
 body.dark .ui.cards>.card>.extra,
 body.dark .ui.pointing.dropdown>.menu>.header,
+body.dark .ui.dropdown .menu>.item,
 body.dark .ui.breadcrumb .icon.divider,
 body.dark .ui.vertical.menu .item,
 body.dark .ui.segment,
